refactor: player scores Team 사용하도록 수정